--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -35,6 +35,6 @@ body {
   }
 
 body, input, select, textarea {
-  color: color(text);
+  color: color('text');
   font-size: 1.3em;
 }
